infra/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
spec:
  rules:
    - host: meb.dev
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/clients/?(.*)
            pathType: Prefix
            backend:
              service:
                name: clients-srv
                port:
                  number: 3000
          - path: /api/notifications/?(.*)
            pathType: Prefix
            backend:
              service:
                name: notifications-srv
                port:
                  number: 3000
          - path: /api/locations/?(.*)
            pathType: Prefix
            backend:
              service:
                name: locations-srv
                port:
                  number: 3000
